--- a/_posts/2020-08-23-Project Lab10.md
+++ b/_posts/2020-08-23-Project Lab10.md
@@ -63,8 +63,9 @@ layout: post
 - 사용자의 정보를 저장하는 테이블을 생성한다.
 
 ```sql
-# user table
-$ CREATE TABLE user
+<user table>
+
+CREATE TABLE user
 (
    idx                bigint auto_increment primary key,
    created_by         varchar(255)     null,
@@ -96,8 +97,9 @@ $ CREATE TABLE user
 - 사용자의 이미지 파일 업로드시 파일 정보를 저장하는 테이블을 생성한다.
 
 ```sql
-# user_attached_file table
-$ CREATE TABLE user_attached_file (
+<user_attached_file table>
+
+CREATE TABLE user_attached_file (
    idx               bigint auto_increment    primary key,
    created_by        varchar(255)    null,
    created_date      datetime(6)     null,
@@ -115,10 +117,8 @@ $ CREATE TABLE user_attached_file (
 - 모든 모듈에서 spring-boot-starter-Security 의존성 라이브러리를 사용하도록 변경하였다.
 
 ```
-build.gradle
-```
+<build.gradle>
 
-```
 // 프로젝트 개발에 필요한 공통 의존성 라이브러리를 선언한다.
 dependencies {
    // spring boot
@@ -165,11 +165,9 @@ project("module-app-api") {
 
 출처: <https://oddpoet.net/blog/2017/04/27/cors-with-spring-Security/>
 
-```
-module-app-web/src/main/java/kr/ac/univ/config/SecurityConfig.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/config/SecurityConfig.java>
+
 package kr.ac.univ.config;
 
 import kr.ac.univ.handler.CustomAuthenticationFailureHandler;
@@ -297,12 +295,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
 출처: <https://u2ful.tistory.com/35>
 
-
-```
-module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationFailureHandler.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationFailureHandler.java>
+
 package kr.ac.univ.handler;
 
 import org.springframework.Security.authentication.*;
@@ -347,11 +342,9 @@ public class CustomAuthenticationFailureHandler implements AuthenticationFailure
 <br>
 - 로그인 성공시 수행하는 handler로, 추후 admon 페이지가 개발되면 root와 manager 권한을 가진 사용자를 admin 페이지로 redirect 시킬 예정이다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationSuccessHandler.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationSuccessHandler.java>
+
 package kr.ac.univ.handler;
 
 import java.io.IOException;
@@ -381,11 +374,9 @@ public class CustomAuthenticationSuccessHandler extends SavedRequestAwareAuthent
 - 사용자가 로그인하는 동안 UserPricipal 클래스를 통하여 데이터를 불러올 수 있다.
 - UserPricipal 클래스의 멤버 변수와 생성자를 변경하면, 사용자가 로그인하는 동안 UserPricipal 클래스가 저장하는 데이터를 변경할 수 있다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/user/dto/UserPrincipal.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/user/dto/UserPrincipal.java>
+
 package kr.ac.univ.user.dto;
 
 import kr.ac.univ.common.domain.enums.ActiveStatus;
@@ -488,11 +479,9 @@ public class UserPrincipal implements UserDetails {
 - countByMemberId: 매개변수의 username과 같은 사용자를 모두 검색한다.(username 중복 조회)
 - findAllByUsernameContaining, findAllByKoreanNameContaining, findAllByEmailContaining: username, koreanname, email을 검색할 때 사용하는 메소드다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/user/repository/UserRepository.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/user/repository/UserRepository.java>
+
 package kr.ac.univ.user.repository;
 
 import kr.ac.univ.noticeBoard.domain.NoticeBoard;
@@ -524,15 +513,12 @@ public interface UserRepository extends JpaRepository<User, Long> {
 - joinUser: 회원 가입 할 때 사용하는 메소드로, 비밀번호는 암호화하여 DB에 저장한다.
 - loadUserByUsername: 사용자가 새로 정의한 로그인 메소스다. Spring Security가 사용자 인증시 데이터를 저장하는 UserPrincipal 객체를 생성 후 반환한다. 예외 처리는 추후 개발 예정이다.
 
-출처: <https://to-dy.tistory.com/86 >
-
-```
-module-domain-core/src/main/java/kr/ac/univ/user/service/UserService.java
-```
+출처: <https://to-dy.tistory.com/86>
 
 ```java
-package kr.ac.univ.user.service;
+<module-domain-core/src/main/java/kr/ac/univ/user/service/UserService.java>
 
+package kr.ac.univ.user.service;
 
 import kr.ac.univ.common.dto.SearchDto;
 import kr.ac.univ.user.domain.User;
@@ -658,11 +644,9 @@ public class UserService implements UserDetailsService {
 ## Controller
 - User(로그인, CRUD 페이지) 관련한 URI 매핑을 담당한다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/controller/UserController.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/controller/UserController.java>
+
 package kr.ac.univ.controller;
 
 import kr.ac.univ.common.dto.SearchDto;
@@ -770,11 +754,9 @@ public class UserController {
 - 회원 가입하는 사용자의 ID의 중복을 확인한다.
 - User를 Create, Update, Delete를 담당하는 메소드는 생략하였다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/UserRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/UserRestController.java>
+
 ...
 
 @PostMapping
@@ -803,11 +785,9 @@ public ResponseEntity<?> postUser(@RequestBody UserDto userDto) {
 출처: <https://velog.io/@josworks27/CSRF-%EA%B0%9C%EB%85%90><br>
 <https://velog.io/@max9106/Spring-Security-csrf>
 
-```
-module-app-web/src/main/resources/templates/layout/script.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/layout/script.html>
+
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/jquery.serialize-object.min.js}"></script>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
@@ -827,11 +807,9 @@ module-app-web/src/main/resources/templates/layout/script.html
 <br>
 - 사용자 로그인 페이지다.
 
-```
-module-app-web/src/main/resources/templates/user/login.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/login.html>
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -861,11 +839,9 @@ module-app-web/src/main/resources/templates/user/login.html
 <br>
 - 사용자가 로그인 후 이동하는 간략한 사용자 정보 확인 페이지다.
 
-```
-module-app-web/src/main/resources/templates/user/index.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/index.html>
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -908,11 +884,9 @@ module-app-web/src/main/resources/templates/user/index.html
 <br>
 - 로그아웃 할 때 이동하는 페이지다.
 
-```
-module-app-web/src/main/resources/templates/user/logoutSuccess.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/logoutSuccess.html>
+
 <script>
    alert("You have logged out.");
    location.href = "/user/index";
@@ -922,11 +896,9 @@ module-app-web/src/main/resources/templates/user/logoutSuccess.html
 <br>
 - 사용자의 권한으로는 접근 불가능한 페이지에 접근하는 경우 이동하는 페이지다.
 
-```
-module-app-web/src/main/resources/templates/user/permission-denied.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/permission-denied.html>
+
 <script>
   alert("You do not have permission on this path.");
   window.history.back();
@@ -937,11 +909,9 @@ module-app-web/src/main/resources/templates/user/permission-denied.html
 - User form 페이지에서 ID 중복을 위한 기능을 ajax로 구현하였다.
 - 사용자는 회원 가입 전 ID가 중복되는지 확인 후 회원 가입을 진행해야 한다.(해당 기능은 구현되었으며 추후 세부적으로 개발 예정)
 
-```
-module-app-web/src/main/resources/templates/user/form.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/form.html>
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -996,11 +966,9 @@ $("#validationUserId").click(function () {
 출처: <https://itstory.tk/entry/Spring-Security-%ED%98%84%EC%9E%AC-%EB%A1%9C%EA%B7%B8%EC%9D%B8%ED%95%9C-%EC%82%AC%EC%9A%A9%EC%9E%90-%EC%A0%95%EB%B3%B4-%EA%B0%80%EC%A0%B8%EC%98%A4%EA%B8%B0><br>
 <https://lemontia.tistory.com/602>
 
-```
-module-system-common/src/main/java/kr/ac/univ/util/AccessCheck.java
-```
-
 ```java
+<module-system-common/src/main/java/kr/ac/univ/util/AccessCheck.java>
+
 package kr.ac.univ.util;
 
 import org.springframework.security.core.Authentication;
@@ -1184,11 +1152,9 @@ public class AccessCheck {
 
 출처: <https://gun0912.tistory.com/1>
 
-```
-module-system-common/src/main/java/kr/ac/univ/util/EmptyUtil.java
-```
-
 ```java
+<module-system-common/src/main/java/kr/ac/univ/util/EmptyUtil.java>
+
 package kr.ac.univ.util;
 
 import java.util.List;
@@ -1227,11 +1193,9 @@ public class EmptyUtil {
 - 프로젝트 수행시 사용자 정보를 미리 DB에 저장하도록 하였다.
 - 사용자 아이디와 비밀번호는 'root/123123123', 'manager/123123123', 'general/123123123', 'non_user/123123123' 다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/ModuleWebApplication.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/ModuleWebApplication.java>
+
 package kr.ac.univ;
 
 import kr.ac.univ.common.domain.enums.ActiveStatus;
