--- a/_posts/2020-08-29-Project Lab11.md
+++ b/_posts/2020-08-29-Project Lab11.md
@@ -48,11 +48,9 @@ layout: post
 - .antMatchers("/**/form").hasAnyAuthority("root, manager, general"): 권한을 가진 사용자만 form 페이지에 접근할 수 있다.
 - .authenticationEntryPoint(new CustomAuthenticationEntryPoint());: 비인증 사용자가 접근하는 경우 에러가 발생하며, 해당 에러를 CustomAuthenticationEntryPoint 핸들러가 처리한다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/config/SecurityConfig.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/config/SecurityConfig.java>
+
 ...
 
 @Override
@@ -98,11 +96,9 @@ protected void configure(HttpSecurity http) throws Exception {
 <br>
 - 비인증 사용자가 인증된 사용자(권한을 요구하는) 페이지에 접근하는 경우 발생하는 예외를 처리한다. Http 상태를 401 에러(UnAuthorized)로 지정하고 비인증 사용자 접근 오류 페이지로 forward 한다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationEntryPoint.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/handler/CustomAuthenticationEntryPoint.java>
+
 package kr.ac.univ.handler;
 
 import org.springframework.security.core.AuthenticationException;
@@ -130,11 +126,9 @@ public class CustomAuthenticationEntryPoint implements AuthenticationEntryPoint 
 <br>
 - JPA Audit을 활용하기 위한 애노테이션(@EnableJpaAuditing)을 설정 파일에 추가하였다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/config/JpaAuditConfig.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/config/JpaAuditConfig.java>
+
 package kr.ac.univ.common.config;
 
 import org.springframework.context.annotation.Configuration;
@@ -153,11 +147,9 @@ public class JpaAuditConfig {
 - 해당 클래스에서 JPA Audit을 사용하기 위한 애노테이션(@EntityListeners(AuditingEntityListener.class))을 Domain 클래스에 추가하였다.
 - 생성일, 수정일 멤버 필드에 @CreatedDate과 @LastModifiedDate 애노테이션을 선언하였다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/domain/CommonAudit.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/domain/CommonAudit.java>
+
 package kr.ac.univ.common.domain;
 
 import lombok.Getter;
@@ -196,11 +188,9 @@ public abstract class CommonAudit {
 <br>
 - 첨부 파일의 경우, 생성일 멤버 필드에 @CreatedDate과 애노테이션을 선언하였다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/domain/AttachedFileAudit.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/domain/AttachedFileAudit.java>
+
 package kr.ac.univ.common.domain;
 
 import lombok.Getter;
@@ -233,11 +223,9 @@ public abstract class AttachedFileAudit {
 - DTO <-> Domain 변환에 사용되는 Builder 패턴에 작성자 및 수정자 정보를 저장하는 setCreatedBy(createdBy));, setLastModifiedBy
 (lastModifiedBy); 소스 코드를 추가하였다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoard.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoard.java>
+
 package kr.ac.univ.noticeBoard.domain;
 
 import kr.ac.univ.common.domain.CommonAudit;
@@ -286,13 +274,10 @@ public class NoticeBoard extends CommonAudit {
 }
 ```
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoardAttachedFile.java
-```
-
 ```java
-package kr.ac.univ.noticeBoard.domain;
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoardAttachedFile.java>
 
+package kr.ac.univ.noticeBoard.domain;
 
 import kr.ac.univ.common.domain.AttachedFileAudit;
 import lombok.Builder;
@@ -338,11 +323,9 @@ public class NoticeBoardAttachedFile extends AttachedFileAudit {
 ## Test
 - 새로 등록된 게시글의 생성일이 JPA Audit에 의해 과거 시간 이후에 등록되었는지 테스트하였다.
 
-```
-module-app-web/src/test/java/kr/ac/univ/JpaAuditTest.java
-```
-
 ```java
+<module-app-web/src/test/java/kr/ac/univ/JpaAuditTest.java>
+
 package kr.ac.univ;
 
 import java.time.LocalDateTime;
@@ -407,11 +390,9 @@ public class JpaAuditTest {
 ## Service
 - 게시글의 경우 DTO에 데이터가 저장되어 전달되지만, 첨부 파일의 경우 데이터를 객체에 저장하여 전달하지 않기 때문에 작성자 데이터를 부가적으로 전달 받는다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/service/NoticeBoardAttachedFileService.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/service/NoticeBoardAttachedFileService.java>
+
 ...
 
 /**
@@ -456,11 +437,9 @@ module-domain-core/src/main/java/kr/ac/univ/noticeBoard/service/NoticeBoardAttac
 - 비인증 사용자: 로그인 페이지로 이동한다.
 - 인증 사용자: index 페이지로 이동한다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/controller/UserController.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/controller/UserController.java>
+
 ...
 
 //Login Page
@@ -489,11 +468,9 @@ public String login(@AuthenticationPrincipal UserPrincipal userPrincipal) {
 ## RestController
 - 게시글의 경우 DTO에 데이터가 저장되어 전달되지만, 첨부 파일의 경우 데이터를 객체에 저장하여 전달하지 않기 때문에 작성자 데이터를 view에서 부가적으로 전달 받는다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java>
+
 // 첨부 파일 업로드
 @PostMapping("/attachedFile")
 public ResponseEntity<?> uploadAttachedFile(Long idx, String createdBy, MultipartFile[] files) throws Exception {
@@ -509,11 +486,9 @@ public ResponseEntity<?> uploadAttachedFile(Long idx, String createdBy, Multipar
 - 작성자 및 수정자 데이터는 input hidden type에 저장되며, 해당 데이터는 RestController로 전달된다.
 - authentication 객체는 Spring Security에서 인증한 사용자의 세션 데이터가 저장된다.
 
-```
-module-app-web/src/main/resources/templates/noticeBoard/form.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/noticeBoard/form.html>
+
 ...
 
 <!-- input type="hidden" -->
@@ -539,11 +514,9 @@ formData.append("createdBy", document.getElementsByName("createdBy")[0].value);
 <br>
 - 비인증 사용자가 form 페이지에 접근하는 경우 이동하는 페이지다.
 
-```
-module-app-web/src/main/resources/templates/user/anonymous-user-permission-denied.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/anonymous-user-permission-denied.html>
+
 <script>
    alert("The login is required to access the page.");
    location.href = "/user/login"
