--- a/_posts/2020-09-01-Project Lab12.md
+++ b/_posts/2020-09-01-Project Lab12.md
@@ -43,8 +43,9 @@ layout: post
 - 프로젝트에서 사용할 댓글 table을 생성한다.
 
 ```sql
-# notice_board_comment
-$ CREATE TABLE notice_board_comment
+<notice_board_comment>
+
+CREATE TABLE notice_board_comment
 (
    idx                bigint auto_increment    primary key,
    created_by         varchar(255)     null,
@@ -66,11 +67,9 @@ DROP TABLE notice_board_comment;
 - NoticeBoard Comment에서 사용하는 Domain다.
 - NoticeBoard의 idx를 참조할 수 있는 noticeBoardIdx 멤버 필드가 존재한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoardComment.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/domain/NoticeBoardComment.java>
+
 package kr.ac.univ.noticeBoard.domain;
 
 import kr.ac.univ.common.domain.CommonAudit;
@@ -117,11 +116,9 @@ public class NoticeBoardComment extends CommonAudit {
 - NoticeBoard Comment에서 사용하는 DTO다.
 - 새로 등록한 댓글인지 확인하는 isNewIcon 멤버 필드와 사용자 권한에 따라 접근할 수 있는 isAccess 멤버 필드가 존재한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/NoticeBoardCommentDto.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/NoticeBoardCommentDto.java>
+
 package kr.ac.univ.noticeBoard.dto;
 
 import kr.ac.univ.common.dto.CommonDto;
@@ -152,11 +149,9 @@ public class NoticeBoardCommentDto extends CommonDto {
 <br>
 - NoticeBoard Comment Entity<->DTO mapping 소스 코드를 생성하는 Mapper 클래스다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/mapper/NoticeBoardCommentMapper.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/mapper/NoticeBoardCommentMapper.java>
+
 package kr.ac.univ.noticeBoard.dto.mapper;
 
 import kr.ac.univ.common.dto.mapper.EntityMapper;
@@ -183,11 +178,9 @@ public interface NoticeBoardCommentMapper extends EntityMapper<NoticeBoardCommen
 <https://derekpark.tistory.com/84>
 
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/repository/NoticeBoardCommentRepository.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/repository/NoticeBoardCommentRepository.java>
+
 package kr.ac.univ.noticeBoard.repository;
 
 import java.util.List;
@@ -208,11 +201,9 @@ public interface NoticeBoardCommentRepository extends JpaRepository<NoticeBoardC
 - QueryDsl를 사용하여 다음과 같은 쿼리를 작성하였다.
 - deleteAllByNoticeBoardIdx: 게시글에 등록된 댓글을 모두 삭제한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/repository/NoticeBoardCommentRepositoryImpl.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/repository/NoticeBoardCommentRepositoryImpl.java>
+
 package kr.ac.univ.noticeBoard.repository;
 
 import javax.transaction.Transactional;
@@ -256,11 +247,9 @@ public class NoticeBoardCommentRepositoryImpl extends QuerydslRepositorySupport 
 - findAllByNoticeBoardIdxOrderByCreatedDateDesc: 게시글에 등록된 댓글을 모두 조회하며, 새로 등록된 댓글 여부와 접근 권한을 설정한다.
 - NoticeBoard Comment service 처럼 NoticeBoard service 또한 접근 불가능한 사용자가 게시글에 접근 권한을 설정한다.(해당 내용은 생략되었다.)
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/service/NoticeBoardCommentService.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/service/NoticeBoardCommentService.java>
+
 package kr.ac.univ.noticeBoard.service;
 
 import kr.ac.univ.maintenance.dto.mapper.MaintenanceMapper;
@@ -343,11 +332,9 @@ public class NoticeBoardCommentService {
 - NoticeBoard Comment 관련 클라이언트의 요청을 view로 매핑한다.
 - NoticeBoard service에서 설정한 접근 권한을 바탕으로 접근 불가능한 사용자가 게시글에 접근할 수 없도록 로직을 추가하였다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/controller/NoticeBoardController.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/controller/NoticeBoardController.java>
+
 package kr.ac.univ.controller;
 
 import kr.ac.univ.common.dto.SearchDto;
@@ -430,11 +417,9 @@ public class NoticeBoardController {
 ## RestController
 - NoticeBoard Comment 관련 클라이언트의 요청을 json 타입으로 응답한다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardCommentRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardCommentRestController.java>
+
 package kr.ac.univ.controller;
 
 import kr.ac.univ.noticeBoard.domain.NoticeBoardComment;
@@ -489,11 +474,9 @@ public class NoticeBoardCommentRestController {
 - 사용자의 권한에 따라 댓글을 등록할 수 있고, 수정 및 삭제 할 수 있다.
 - 댓글의 'Update' 버튼을 클릭하는 경우 span 태그가 보이지 않고 form 태그가 보여 댓글을 수정할 수 있고, 'Cancel' 버튼을 클릭하는 경우 span 태그가 보이고 form 태그가 보이지 않게  된다.
 
-```
-module-app-web/src/main/resources/templates/noticeBoard/read.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/noticeBoard/read.html>
+
 ...
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -814,11 +797,9 @@ module-app-web/src/main/resources/templates/noticeBoard/read.html
 ## Util
 - 생성자, 권한, 로그인한 사용자의 데이터를 활용하여 사용자 접근 권한을 판별한다.
 
-```
-module-system-common/src/main/java/kr/ac/univ/util/AccessCheck.java
-```
-
 ```java
+<module-system-common/src/main/java/kr/ac/univ/util/AccessCheck.java>
+
 package kr.ac.univ.util;
 
 import org.springframework.security.core.Authentication;
