--- a/_posts/2020-09-05-Project Lab13.md
+++ b/_posts/2020-09-05-Project Lab13.md
@@ -31,8 +31,9 @@ layout: post
 - 프로젝트에서 사용할 논문 게시판 table을 생성한다.
 
 ```sql
-# publication table
-$ CREATE TABLE publication
+<publication table>
+
+CREATE TABLE publication
 (
    idx                bigint auto_increment    primary key,
    created_by         varchar(255)     null,
@@ -61,15 +62,16 @@ $ CREATE TABLE publication
 - 프로젝트에서 사용할 논문 게시판 첨부 파일 table을 생성한다.
 
 ```sql
-/* publication_attached_file table */
+<publication_attached_file table>
+
 CREATE TABLE publication_attached_file (
- idx               bigint auto_increment    primary key,
- created_by        varchar(255)    null,
- created_date      datetime(6)     null,
- file_name         varchar(255)    null,
- saved_file_name   varchar(255)    null,
- publication_idx  bigint          null,
- file_size         varchar(255)    null
+  idx               bigint auto_increment    primary key,
+  created_by        varchar(255)    null,
+  created_date      datetime(6)     null,
+  file_name         varchar(255)    null,
+  saved_file_name   varchar(255)    null,
+  publication_idx  bigint          null,
+  file_size         varchar(255)    null
 );
 
 ALTER TABLE publication_attached_file AUTO_INCREMENT=1;
@@ -84,11 +86,9 @@ DROP TABLE publication_attached_file;
 
 출처: <https://medium.com/@lifecluee/string%EC%9D%84-%EA%B3%A0%EC%A7%91%ED%95%98%EB%8A%94-controller-%EA%B0%9C%EC%84%A0%EA%B8%B0-721cba570756>
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/converter/StringToPublicationSearchType.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/converter/StringToPublicationSearchType.java>
+
 package kr.ac.univ.common.converter;
 
 import kr.ac.univ.publication.dto.enums.PublicationSearchType;
@@ -106,11 +106,9 @@ public class StringToPublicationSearchType implements Converter<String, Publicat
 <br>
 - 앞에서 구현한 사용자 정의 StringToPublicationSearchType 클래스(converter)를 module-app-web 모듈과 module-app-api 모듈의 WebConfig 설정 파일에 등록한다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/config/WebConfig.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/config/WebConfig.java>
+
 package kr.ac.univ.config;
 
 import kr.ac.univ.common.converter.StringToPublicationSearchType;
@@ -128,11 +126,9 @@ public class WebConfig implements WebMvcConfigurer {
 }
 ```
 
-```
-module-app-web/src/main/java/kr/ac/univ/config/WebConfig.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/config/WebConfig.java>
+
 package kr.ac.univ.config;
 
 import kr.ac.univ.common.converter.StringToPublicationSearchType;
@@ -155,11 +151,9 @@ public class WebConfig implements WebMvcConfigurer {
 ## Domain 및 DTO
 - Publication에서 사용하는 Domain과 Domain의 enum 자료형이다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/domain/enums/PublicationType.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/domain/enums/PublicationType.java>
+
 package kr.ac.univ.publication.domain.enums;
 
 public enum PublicationType {
@@ -189,11 +183,9 @@ public enum PublicationType {
 }
 ```
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/domain/enums/PublishingArea.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/domain/enums/PublishingArea.java>
+
 package kr.ac.univ.publication.domain.enums;
 
 public enum PublishingArea {
@@ -213,11 +205,10 @@ public enum PublishingArea {
 ```
 
 <br>
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/domain/Publication.java
-```
 
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/domain/Publication.java>
+
 package kr.ac.univ.publication.domain;
 
 
@@ -323,11 +314,9 @@ public class Publication extends CommonAudit {
 - NoticeBoard DTO <-> Entity간 객체 mapping 소스 코드가 Mapstruct에 의해 생성되도록 메소드를 선언 및 정의하는 클래스다.
 - default 메소드는 사용자가 정의한 메소드로, Entity 파일 리스트를 DTO의 파일 리스트로 매핑한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/dto/mapper/PublicationMapper.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/dto/mapper/PublicationMapper.java>
+
 package kr.ac.univ.publication.dto.mapper;
 
 import kr.ac.univ.common.dto.mapper.EntityMapper;
@@ -356,11 +345,9 @@ public interface PublicationMapper extends EntityMapper<PublicationDto, Publicat
 <br>
 - Publication에서 사용하는 DTO다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/dto/PublicationDto.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/dto/PublicationDto.java>
+
 package kr.ac.univ.publication.dto;
 
 import java.time.LocalDate;
@@ -408,11 +395,9 @@ public class PublicationDto extends CommonDto {
 - PublicationSearchType enum 자료형은 검색에서 사용되며, View String type -> Controller enum type로 앞에서 등록한 사용자 정의 converter에 의해 변환된다.
 - Publication domain의 논문 종류(PublicationType enum 자료형)와 논문 출판 지역(PublishingArea enum 자료형)의 모든 경우의 수를 하나의 enum 자료형으로 정의하였다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/dto/enums/PublicationSearchType.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/dto/enums/PublicationSearchType.java>
+
 package kr.ac.univ.publication.dto.enums;
 
 public enum PublicationSearchType {
@@ -458,11 +443,9 @@ public enum PublicationSearchType {
 - Publication 검색에서 사용하는 DTO다.
 - 검색 종류, 검색 키워드 데이터가 있는 SearchDto를 상속 받았으며, publicationSearchType 멤버 필드는 논문 출판 지역과 논문 종류를 정의한 enum 자료형이다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/dto/PublicationSearchDto.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/dto/PublicationSearchDto.java>
+
 package kr.ac.univ.publication.dto;
 
 import kr.ac.univ.common.dto.SearchDto;
@@ -490,11 +473,9 @@ public class PublicationSearchDto extends SearchDto {
 - findMaxPublicationIdx: 논문 idx의 최대값을 조회한다.
 - findTop15ByPublicationSearchDto: lastIdx(조회한 리스트의 마지막 요소의 idx)보다 작거나 같고 PublicationSearchDto를 비교하여 조건에 일치하는 리스트를 15개 조회한다. QueryDsl은 BooleanExpression을 통하여 동적 쿼리를 사용할 수 있으며, 해당 쿼리에 적용된 동적 조건은 2가지다. eqSearchType는 검색 종류와 검색 키워드를, eqPublicationSearchType는 논문 출판 지역과 논문 종류를 각 조건을 판별한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/repository/PublicationRepositoryImpl.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/repository/PublicationRepositoryImpl.java>
+
 package kr.ac.univ.publication.repository;
 
 
@@ -633,11 +614,9 @@ public class PublicationRepositoryImpl extends QuerydslRepositorySupport {
 - Publication의 비즈니스 로직이다.
 - findPublicationListScroll: 무한 스크롤 게시판에서 스크롤 이벤트가 발생할 때 사용된다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/publication/service/PublicationService.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/publication/service/PublicationService.java>
+
 package kr.ac.univ.publication.service;
 
 
@@ -790,11 +769,9 @@ public class PublicationService {
 - Publication 관련 클라이언트의 요청을 view로 매핑한다.
 - publicationHomeList: 무한 스크롤 게시판에 접근할 때 응답한다.
 
-```
-module-app-web/src/main/java/kr/ac/univ/controller/PublicationController.java
-```
-
 ```java
+<module-app-web/src/main/java/kr/ac/univ/controller/PublicationController.java>
+
 package kr.ac.univ.controller;
 
 import kr.ac.univ.publication.dto.PublicationDto;
@@ -842,11 +819,9 @@ public class PublicationController {
 - Publication 관련 클라이언트의 요청을 json 타입으로 응답한다.
 - publicationListScroll: 스크롤 이벤트가 발생할 때 응답하며, lastIdx(조회한 리스트의 마지막 요소의 idx)를 기준으로 publication 데이터를 검색한다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/PublicationRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/PublicationRestController.java>
+
 package kr.ac.univ.controller;
 
 
@@ -903,11 +878,9 @@ public class PublicationRestController {
 
 출처: <https://c10106.tistory.com/4173>
 
-```
-module-app-web/src/main/resources/templates/publication/list_scroll.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/publication/list_scroll.html>
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -1192,11 +1165,9 @@ module-app-web/src/main/resources/templates/publication/list_scroll.html
 
 출처: <https://m.blog.naver.com/PostView.nhn?blogId=hay6308&logNo=220958671660&proxyReferer=https:%2F%2Fwww.google.com%2F
 
-```
-module-app-web/src/main/resources/static/js/util.js
-```
-
 ```javascript
+<module-app-web/src/main/resources/static/js/util.js>
+
 /* URI 파라미터 반환 */
 function getUriParams() {
    var params = {};
@@ -1214,11 +1185,9 @@ function makeGetUri(uri, params) {
 }
 ```
 
-```
-module-app-web/src/main/resources/templates/layout/script.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/layout/script.html>
+
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/jquery.serialize-object.min.js}"></script>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
