--- a/_posts/2020-09-10-Project Lab14.md
+++ b/_posts/2020-09-10-Project Lab14.md
@@ -35,11 +35,9 @@ layout: post
 
 출처: <https://cofs.tistory.com/267>
 
-```
-module-app-web/src/main/resources/static/js/validation.js
-```
-
 ```javascript
+<module-app-web/src/main/resources/static/js/validation.js>
+
 /* 공백 문자 검사 */
 function validateSpaceChar(str) {
    if(str.search(/\s/) != -1) {
@@ -245,11 +243,9 @@ function validateFile(file) {
 - usernameVaildation(ID 중복 검사 여부), passwordVaildation(password와 passwordCheck 값이 같은지 검사 여부), emailVaildation(유효한 이메일 주소 검사 여부), privateEmailVaildation(유효한 이메일 주소 검사 여부), contactVaildation(유효한 연락처 검사 여부) 전역 변수를 선언하여 각 해당되는 유효성 검사가 통과된 경우에만 서버에 요청을 보낼 수 있다.
 - validateImageFile: 업로드 하려는 파일이 유효한 이미지 파일 확장자(".jpg", ".jpeg", ".png") 인지 검사한다. 드래그앤드랍 이벤트로 파일 업로드 하는 경우와 input type="file"를 사용하여 파일 업로드 하는 경우 모두 유효성 검사를 수행한다.
 
-```
-module-app-web/src/main/resources/templates/user/form.html
-```
-
 ```html
+<module-app-web/src/main/resources/templates/user/form.html>
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
