--- a/_posts/2020-09-23-Project Lab15.md
+++ b/_posts/2020-09-23-Project Lab15.md
@@ -58,11 +58,9 @@ layout: post
 - Bean Validation 2.0 API의 유효성 검사에 실패하면 예외 정보를 Controller 파라미터에 BindingResult bindingResult를 선언 후 bindingResult.hasError() 메소드를 사용하여 확인할  수 있다.
 - 그러나 해당 방법은 모든 응답마다 유효성 검사를 위한 소스 코드가 추가되기에 비효율적이므로, 유효성 검사에 실패하면 발생하는 예외를 전역에서 예외처리 하도록 구현하였다.
 
-```
-test.java
-```
-
 ```java
+<test.java>
+
 @PostMapping("/books") public void save(@RequestBody @Valid AddBookRequestDto addBookRequestDto, BindingResult bindingResult)
 {
     if (bindingResult.hasErrors())
@@ -99,10 +97,8 @@ try {
 - Java bean 유효성 검사를 위한 spring-boot-starter-validation 의존성과 파일 유효성 검사(MIME Type)에 필요한 Apache Tika 의존성을 추가한다.
 
 ```
-build.gradle
-```
+<build.gradle>
 
-```
    // 프로젝트 개발에 필요한 공통 의존성 라이브러리를 선언한다.
    dependencies {
        // spring boot
@@ -139,10 +135,8 @@ project(":module-domain-core") {
 - Error 클래스, Handler 클래스, Validation 클래스, module-web-core와 module-app-admin이 공통적으로 사용하는 Web Resources(html, css, javascript 등) 파일이 위치한다. Web Resource는 추후 리펙토링 때 분리할 예정이다.
 
 ```
-settings.gradle
-```
+<settings.gradle>
 
-```
 rootProject.name = 'lab'
 include 'module-system-common'
 include 'module-domain-core'
@@ -156,10 +150,8 @@ include 'module-web-core'
 - max-swallow-size: 요청 body의 크기를 설정한다. 업로드되는 파일 크기가 제한(20MB)을 초과하여 예외가 발생하는 경우, 사용자 정의 예외처리 방식으로 수행되도록 한다.
 
 ```
-module-app-api/src/main/resources/application.yml
-```
+<module-app-api/src/main/resources/application.yml>
 
-```
 spring:
  jpa:
    open-in-view: false
@@ -187,11 +179,9 @@ server:
 - 모든 DTO에서 공통적으로 사용하는 DTO다.
 - private String createdBy: @NotBlank 생성자 데이터가 공란인지 유효성 검사한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/dto/CommonDto.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/dto/CommonDto.java>
+
 package kr.ac.univ.common.dto;
 
 import kr.ac.univ.common.domain.enums.ActiveStatus;
@@ -227,11 +217,9 @@ public class CommonDto {
 
 출처: <https://cheese10yun.github.io/ConstraintValidator/>
 
-```
-module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/NoticeBoardDto.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/noticeBoard/dto/NoticeBoardDto.java>
+
 package kr.ac.univ.noticeBoard.dto;
 
 import kr.ac.univ.common.dto.CommonDto;
@@ -273,11 +261,9 @@ public class NoticeBoardDto extends CommonDto {
 - String message(): @Editor를 통해 입력되는 message다.
 - long max(): @Editor를 통해 입력되는 최대 byte 크기다. byte 크기를 제한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/validation/Editor.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/validation/Editor.java>
+
 package kr.ac.univ.common.validation;
 
 import java.lang.annotation.Documented;
@@ -306,11 +292,9 @@ public @interface Editor {
 - initialize: @Editor를 통해 입력되는 최대 byte 크기를 초기화 한다.
 - long max(): ConstraintValidator의 유효성 검사 로직이다. byte 크기가 16MB 이하인지 유효성 검사한다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/validation/EditorValidator.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/validation/EditorValidator.java>
+
 package kr.ac.univ.common.validation;
 
 import kr.ac.univ.util.ByteSizeUtil;
@@ -340,11 +324,9 @@ public class EditorValidator implements ConstraintValidator<Editor, String> {
 <https://photoress.tistory.com/entry/String%ED%98%95-Bytes%EB%A1%9C-length%EA%B5%AC%ED%95%98%EA%B8%B0><br>
 <https://blog.miyam.net/125>
 
-```
-module-system-common/src/main/java/kr/ac/univ/util/ByteSizeUtil.java
-```
-
 ```java
+<module-system-common/src/main/java/kr/ac/univ/util/ByteSizeUtil.java>
+
 package kr.ac.univ.util;
 
 import java.io.UnsupportedEncodingException;
@@ -370,11 +352,9 @@ public class ByteSizeUtil {
 - NoticeBoard 관련 클라이언트의 요청을 json 타입으로 응답한다.
 - @Valid를 사용하면 View에서 전달되는 데이터에 대해서 유효성 검사가 수행된다. 만약 NoticeBoardDto 유효성 검사에 실패하여 예외가 발생한다면, 해당 예외는 전역에서 예외처리 된다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java>
+
 package kr.ac.univ.controller;
 
 import kr.ac.univ.common.validation.FileValidator;
@@ -440,11 +420,9 @@ public class NoticeBoardRestController {
 <https://kb.intermedia.net/article/23567><br>
 <https://www.file-extensions.org/filetype/extension/name/dangerous-malicious-files>
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/validation/FileType.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/validation/FileType.java>
+
 package kr.ac.univ.common.validation;
 
 import java.util.HashSet;
@@ -652,11 +630,9 @@ public class FileType {
 - MIME type, 파일 확장자 유효성 검사가 수행된다. Apache Tika 라이브러리를 사용하여 파일의 MIME type을 유효성 검사하고, 이후 파일 확장자를 유효성 검사한다.
 - 만약 MIME type과 파일 확장자 유효성 검사에 실패한다면 에러 메시지가 Controller에 반환되고, 유효성 검사에 성공한다면 "valid" 문자열이 반환된다.
 
-```
-module-domain-core/src/main/java/kr/ac/univ/common/validation/FileValidator.java
-```
-
 ```java
+<module-domain-core/src/main/java/kr/ac/univ/common/validation/FileValidator.java>
+
 package kr.ac.univ.common.validation;
 
 import java.io.IOException;
@@ -727,11 +703,9 @@ public class FileValidator {
 - View에서 전달되는 파일에 대해서 MimeType과 파일 확장자 유효성 검사가 수행된다.
 - MimeType과 파일 확장자 유효성 검사에 실패한다면(Service에서 반환한 문자열이 에러 메시지인 경우), FileTypeException 예외가 발생하고 해당 예외는 전역에서 예외처리 된다.
 
-```
-module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java
-```
-
 ```java
+<module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.java>
+
 ...
 
     // 첨부 파일 업로드
@@ -759,11 +733,9 @@ module-app-api/src/main/java/kr/ac/univ/controller/NoticeBoardRestController.jav
 - 또한 사용자에게 전달되는 예외 메시지가 일관성을 가지기 위해서, 예외 데이터를 저장하는 ErrorResponse 클래스를 생성하였다. 예외 관련 데이터는 ErrorResponse 클래스에 초기화된 다음 클라이언트에 응답한다.
 - 각 예외에 대한 설명은 주석을 참고하면 된다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/handler/GlobalExceptionHandler.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/handler/GlobalExceptionHandler.java>
+
 package kr.ac.univ.handler;
 
 import kr.ac.univ.error.ErrorCode;
@@ -897,11 +869,9 @@ public class GlobalExceptionHandler {
 - 첫 번째는 새로운 예외가 발생할 때 생성자를 통해 예외 메시지를 초기화 하는 방법이다.(new Exception("Error message");) 해당 메시지를 json 자료형으로 형변환 하면, 에러 메시지를 errors 배열에서 확인할 수 있다.
 - 두 번째는 ErrorResponse의 ErrorCode enum 자료형을 통해 에러 메시지 데이터에 의해서 초기화 된다. 해당 메시지를 json 자료형으로 형변환 하면, 에러 메시지를 message json에서 확인할 수 있다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/error/ErrorCode.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/error/ErrorCode.java>
+
 package kr.ac.univ.error;
 
 
@@ -955,11 +925,9 @@ public enum ErrorCode {
 - ErrorResponse 클래스는 예외 메시지 관련 데이터를 저장하는 클래스다.
 - 전달되는 파라미터에 따라 다양한 경우의 클래스를 초기화 하기 위한 생성자와 메소드로 구성된다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/error/ErrorResponse.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/error/ErrorResponse.java>
+
 package kr.ac.univ.error;
 
 
@@ -1059,11 +1027,9 @@ public class ErrorResponse {
 - BussinessException 클래스는 사용자 정의 예외다.
 - 비즈니스 로직에서 예외가 발생하는 경우 예외 메시지 관련 데이터를 초기화하기 위한 생성자가 있다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/exception/BusinessException.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/exception/BusinessException.java>
+
 package kr.ac.univ.exception;
 
 import kr.ac.univ.error.ErrorCode;
@@ -1096,11 +1062,9 @@ public class BusinessException extends RuntimeException {
 - FileTypeException 클래스는 사용자 정의 예외다.
 - 파일 유효성 검사에서 예외가 발생하는 경우 예외 메시지 관련 데이터를 초기화하기 위한 생성자가 있다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/exception/FileTypeException.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/exception/FileTypeException.java>
+
 package kr.ac.univ.exception;
 
 public class FileTypeException extends BusinessException {
@@ -1115,11 +1079,9 @@ public class FileTypeException extends BusinessException {
 - InvalidUsernameException 클래스는 사용자 정의 예외다.
 - 사용자 로그인시 ID가 유효하지 않아 예외가 발생하는 경우 예외 메시지 관련 데이터를 초기화하기 위한 생성자가 있다.
 
-```
-module-web-core/src/main/java/kr/ac/univ/exception/InvalidUsernameException.java
-```
-
 ```java
+<module-web-core/src/main/java/kr/ac/univ/exception/InvalidUsernameException.java>
+
 package kr.ac.univ.exception;
 
 import kr.ac.univ.error.ErrorCode;
@@ -1135,11 +1097,9 @@ public class InvalidUsernameException extends BusinessException {
 <br>
 - 서버에서 예외 처리하여 사용자에게 전달된 에러 메시지를 View에서 parsing 하여 출력하는 함수다.
 
-```
-module-app-web/src/main/resources/static/js/validation.js
-```
-
 ```javascript
+<module-app-web/src/main/resources/static/js/validation.js>
+
 /*
 * validation response message alert
 */
@@ -1160,11 +1120,9 @@ function paraseErrorMsg(msg) {
 <br>
 - Javsacript: 객체가 비어있는지 확인하는 함수다.
 
-```
-module-app-web/src/main/resources/static/js/util.js
-```
-
 ```javascript
+<module-app-web/src/main/resources/static/js/util.js>
+
 /* 객체 empty 여부 반환 */
 function isEmpty(obj) {
    for(var prop in obj) {
@@ -1179,11 +1137,9 @@ function isEmpty(obj) {
 <br>
 - ajax를 통하여 요청하는 경우 에러가 발생하여 에러 메시지를 받는다면, parseErrorMsg 함수를 통하여 받은 메시지를 사용자에게 alert 경고창으로 알려준다.
 
-```
-module-app-web/src/main/resources/templates/noticeBoard/form.html
-```
-
 ```javascript
+<module-app-web/src/main/resources/templates/noticeBoard/form.html>
+
 $.ajax({
    url: "http://localhost:8081/api/notice-boards/attachedFile",
    type: "post",
