--- a/_posts/2020-11-02-Project Lab18.md
+++ b/_posts/2020-11-02-Project Lab18.md
@@ -17,14 +17,12 @@ layout: post
 
 
 ## 소스 코드 변경 및 버그 수정 사항
-- 벡엔드 mainPagePriority 유효성 검사 로직 버그 수정하였다. 
-- 최근 등록된 게시글을 사용자에게 알려주는 New Icon 알고리즘 로직을 변경하였다. 기존 2일을 기준으로 최근 등록된 게시글임을 표시하였다. 정확성을 높이기 위해 기준을 일(2일) 대신 시간(24시간)으로 변경하였다. 
-
-```
-module-system-common/src/main/java/kr/ac/univ/util/NewIconCheck.java
-```
+- 벡엔드 mainPagePriority 유효성 검사 로직 버그 수정하였다.
+- 최근 등록된 게시글을 사용자에게 알려주는 New Icon 알고리즘 로직을 변경하였다. 기존 2일을 기준으로 최근 등록된 게시글임을 표시하였다. 정확성을 높이기 위해 기준을 일(2일) 대신 시간(24시간)으로 변경하였다.
 
 ```java
+<module-system-common/src/main/java/kr/ac/univ/util/NewIconCheck.java>
+
 package kr.ac.univ.util;
 
 import java.time.LocalDateTime;
@@ -53,21 +51,21 @@ public class NewIconCheck {
 
 
 ## 프로젝트에서 주로 사용하는 색상
-- 프로젝트에서 주로 사용하는 색은 바탕에 black과 액션 효과에 red로 설정하였다. rgb는 다음과 같다. 
+- 프로젝트에서 주로 사용하는 색은 바탕에 black과 액션 효과에 red로 설정하였다. rgb는 다음과 같다.
 - red color: rgb(158, 37, 41);
 - black color: rgb(48, 48, 48);
 
 
 
-## Login page UI 변경 
+## Login page UI 변경
 - Login page의 UI를 하단 출처를 참고하여 변경하였다.
 
 출처: <https://www.bootstrapdash.com/product/free-bootstrap-login/>
 
 
 
-## Sidebar, Header, Footer UI 변경 
-- Sidebar, Header, Footer UI를 하단 출처를 참고하여 변경하였다. 
+## Sidebar, Header, Footer UI 변경
+- Sidebar, Header, Footer UI를 하단 출처를 참고하여 변경하였다.
 - Logout 버튼 클릭시 confirm 창 출력
 
 출처: <https://startbootstrap.com/templates/simple-sidebar/>
@@ -80,16 +78,16 @@ public class NewIconCheck {
 
 
 ## CSS 변경 사항
-- 자주 사용하는 값들은 변수를 사용하도록 변경하였다. 
+- 자주 사용하는 값들은 변수를 사용하도록 변경하였다.
 - 기존 px 크기 단위를 rem 크기 단위로 변경하였다.
-- img 태그의 border와 마우스를 올려 놓는 경우 효과를 하단 출처를 참고하여 추가하였다. 
+- img 태그의 border와 마우스를 올려 놓는 경우 효과를 하단 출처를 참고하여 추가하였다.
 
 출처: <https://www.w3schools.com/css/css3_images.asp>
 
 
 
 ## Icon 사용
-- Icon은 하단 출처를 참고하여 사용하였다. 
+- Icon은 하단 출처를 참고하여 사용하였다.
 - 해당 사이트에서 제공하는 아이콘은 무료로 색상과 크기를 임의로 변경하여 사용할 수 있다.
 
 출처: <https://feathericons.com/?query=arrow><br>
