--- a/_posts/2021-06-16-Project Lab23, 26.md
+++ b/_posts/2021-06-16-Project Lab23, 26.md
@@ -14,7 +14,7 @@ layout: post
 ## Spring Boot Gradle jar 파일 생성
 - 운영체 제에서 실행가능한 Spring Boot 애플리케이션(실행 가능한 자바 파일)을 빌드하려면 console에서 다음 명령어를 입력하면 된다. 빌드된 파일을 실행하면 웹 애플리케이션이 수행된다.
 
-```
+```bash
 $ ./gradlew bootjar
 ```
 
@@ -26,7 +26,7 @@ $ ./gradlew bootjar
 ## 서버 설치 및 설정
 - 서버 운영체제는 Ubuntu 20.04 이며, 서버 구축에 필요한 패키지 설치 명령어는 다음과 같다.
 
-```
+```bash
 # 서버 업데이트 및 업그레이드
 $ sudo apt-get update -y
 $ sudo apt-get upgrade -y
@@ -46,11 +46,9 @@ $ mkdir upload
 ## Spring Boot jar 파일 실행 스크립트
 - 이미 실행 중인 Spring Boot 애플리케이션을 종료하고 재시작하는 간단한 스크립트를 다음과 같이 작성하였다.
 
-```
-run_server.sh
-```
+```bash
+<run_server.sh>
 
-```
 kill -9 `pgrep -f java`
 
 java -jar module-app-admin-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod > module-app-admin.log &
@@ -66,7 +64,7 @@ java -jar module-app-api-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod > modu
 
 ## Nginx 설치 및 설정
 
-```
+```bash
 # nginx 설치
 $ sudo apt-get install nginx -y
 
@@ -150,10 +148,8 @@ $ tail -2f /var/log/nginx/error.log
 - Certbot으로 SSL 인증서를 등록을 마치면, nginx.conf 파일에 다음과 같이 SSL 관련 설정이 '# managed by Certbot' 주석으로 표기되어 자동으로 추가된 것을 확인 할 수 있다.
 
 ```
-/etc/nginx/nginx.conf
-```
+</etc/nginx/nginx.conf>
 
-```
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
