--- a/_posts/2022-03-14-MISRAC8.md
+++ b/_posts/2022-03-14-MISRAC8.md
@@ -15,11 +15,9 @@ layout: post
 - 다른 파일 내에서의 동일한 식별자로 정의된 객체나 함수는 내용이 같더라도 허용되지 않는다.(one definition rule 위반)
 - MISRA_C_2012 규칙에서, 전역 변수 및 함수를 선언하여 사용하는 방법은 다음과 같다.
 
-```
-common.h
-```
-
 ```c
+<common.h>
+
 #ifndef COMMON_HEADER
 #define COMMON_HEADER
 
@@ -34,24 +32,18 @@ int32_t common_data;
 #endif
 ```
 
-
-```
-foo.h
-```
-
 ```c
+<foo.h>
+
 #include "common.h"
 
 // 함수 선언은 헤더 파일에 존재, 함수명 중복 금지
 void foo(void);
 ```
 
-
-```
-foo.c
-```
-
 ```c
+<foo.c>
+
 #include "foo.h"
 
 // 함수 선언은 c 파일에 존재
@@ -61,11 +53,9 @@ void foo(void) {
 }
 ```
 
-```
-main.c
-```
-
 ```c
+<main.c>
+
 #include "common.h"
 #include "foo.h"
 
