--- a/_posts/2020-12-07-Project Lab21.md
+++ b/_posts/2020-12-07-Project Lab21.md
@@ -18,7 +18,7 @@ layout: post
 
 
 ## 소스 코드 변경 및 버그 수정 사항
-- Introduction 게시글은 Active Status 필드 값이 'ACTIVE' 하나만 등록할 수 있다. 
+- Introduction 게시글은 Active Status 필드 값이 'ACTIVE' 하나만 등록할 수 있다.
 
 - Introduction의 content에서 summernote 에디터를 제거하였다.
 
@@ -45,10 +45,8 @@ layout: post
 - module-app-web과 module-app-admin의 로그인 세션이 공유되는 문제를 해결하였다.
 
 ```
-application.yml
-```
+<application.yml>
 
-```
 server:
  servlet:
    session:
@@ -62,8 +60,8 @@ server:
 
 
 ## 사용자 페이지 개발
-- 사용자 페이지는 bootstrapmade 사이트의 Vesperr 템플릿을 참고하여 개발하여 메인 페이지 및 하위 페이지들(Research Field, Member, Publication, Seminars, Notice Boards, Alumni Association, Album)을 개발하였다. 
-- 아직 디자인이 확정되지 않았기에 지속적으로 변경될 예정이다. 
+- 사용자 페이지는 bootstrapmade 사이트의 Vesperr 템플릿을 참고하여 개발하여 메인 페이지 및 하위 페이지들(Research Field, Member, Publication, Seminars, Notice Boards, Alumni Association, Album)을 개발하였다.
+- 아직 디자인이 확정되지 않았기에 지속적으로 변경될 예정이다.
 
 출처: <https://bootstrapmade.com/demo/Vesperr/>
 
