--- a/_posts/2022-06-04-Essay2.md
+++ b/_posts/2022-06-04-Essay2.md
@@ -58,7 +58,7 @@ layout: post
 int32_t 최소값: -2147483648<br>
 int32_t 최대값: 2147483647<br>
 uint32_t 최소값: 0<br>
-uint32_t 최대값: 4294967295<br>
+uint32_t 최대값: 4294967295
 
 ![image](/assets/img/2022-06-04-Essay2/image1.png)
 
