--- a/_posts/2022-06-04-Essay2.md
+++ b/_posts/2022-06-04-Essay2.md
@@ -63,7 +63,7 @@ uint32_t 최대값: 4294967295
 ![image](/assets/img/2022-06-04-Essay2/image1.png)
 
 
-- a는 음수고 b는 양수로 조건문이 거짓이 될 것 같지만, "Casting 충격"이 발생하여 a는 unsigned 정수 자료형으로 묵시적 형변환되어 2147483648U이 되어 조건문은 참이 된다.
+- a는 음수고 b는 양수로 조건문이 거짓이 될 것 같지만, "Casting 충격"이 발생하여 a는 unsigned 정수 자료형(2147483648U)으로 묵시적 형변환되어 조건문은 참이 된다.
 
 예제)
 ```c
