--- a/_posts/2022-06-04-Essay2.md
+++ b/_posts/2022-06-04-Essay2.md
@@ -62,7 +62,6 @@ uint32_t 최대값: 4294967295
 
 ![image](/assets/img/2022-06-04-Essay2/image1.png)
 
-
 - a는 음수고 b는 양수로 조건문이 거짓이 될 것 같지만, "Casting 충격"이 발생하여 a는 unsigned 정수 자료형(2147483648U)으로 묵시적 형변환되어 조건문은 참이 된다.
 
 예제)
@@ -135,7 +134,7 @@ if(readSize != 0){
 
 
 ### 1. 반복문의 '초기식 변수' 자료형을 잘 설계해야 한다.
-- 초기식 변수를 반복문 내에서 피연산자로 사용하는 경우, unsigned 자료형과 signed 자료형이 서로 묵시적으로 형변환하여 위배가 발생할 수 있다.
+- 초기식 변수를 반복문 내에서 피연산자로 사용하는 경우, unsigned 자료형과 signed 자료형이 서로 묵시적 형변환으로 위배가 발생할 수 있다.
 
 예제)
 ```c
@@ -330,8 +329,8 @@ int32_t sizeWord = n3DataWords + MESSAGE_BYTES_SIZE;
 ```
 
 
-### 5. 프로그램 로직을 고려하여 클래스 멤버 필드 자료형, 구조체 멤버 변수 자료형, 함수 반환 및 매개변수 자료형, 변수 자료형 잘 설계해야 한다.
-- 특히 함수를 호출 할 때 전달 인자 자료형 및 반환 자료형을 일치시켜 변수를 선언해야 한다.
+### 5. 프로그램 로직을 고려하여 클래스 멤버 필드 자료형, 구조체 멤버 변수 자료형, 함수 반환 및 매개변수 자료형, 변수 자료형 등을 잘 설계해야 한다.
+- 함수 호출 할 때 전달 인자 자료형 및 반환 자료형을 고려하여 변수를 선언해야 한다.
 
 예제)
 ```c
